# zikkurat-formats-binary

./: .gitignore  Container.hs  ForeignArray.hs  Helpers.hs  Primes.hs  R1CS.hs  README.md  Witness.hs  zikkurat-formats-binary.cabal
src/ZK/Formats/: Dummy.hs  ForeignArray.hs  Helpers.hs  Math.hs  Primes.hs  Types.hs
src/ZK/Formats/Binary/: Container.hs  Ltau.hs  Ptau.hs  R1CS.hs  Witness.hs  ZKey.hs
src/ZK/Formats/Types/: Etc.hs  Ltau.hs  Ptau.hs  R1CS.hs  Witness.hs  ZKey.hs
